[gd_scene load_steps=2 format=4 uid="uid://d06tdxdqhqjbd"]

[ext_resource type="Script" path="res://shared/sfx/play_sound_when_visible.gd" id="1"]

[node name="PlaySoundWhenVisible" type="VisibleOnScreenNotifier2D"]
script = ExtResource("1")

[connection signal="screen_entered" from="." to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="." to="." method="_on_screen_exited"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
